--- a/src/remarkable-ui/editors/InputField/InputField.module.css
+++ b/src/remarkable-ui/editors/InputField/InputField.module.css
@@ -1,95 +1,77 @@
+.field {
+  height: var(--em-textfield-height, 2.5rem);
+  min-width: var(--em-textfield-min-width, 10rem);
+  width: 100%;
+}
+
 .input {
+  height: inherit;
   display: flex;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
-
-  height: var(--TEMP-text-input-size-height, 2rem);
-  width: 100%;
-  padding: var(--TEMP-text-input-padding-default, 0.5rem);
-  border-radius: var(--TEMP-text-input-border-radius-default, 0.5rem);
-  border: var(--TEMP-text-input-border-width-default, 1px) solid
-    var(--TEMP-text-input-border-color-default, #d2d2d5);
-  background: var(--TEMP-text-input-background-color-default, #f7f7f8);
-  color: var(--TEMP-text-input-label-color-filled, #212129);
+  padding: var(--em-textfield-padding, 0.5rem);
+  border-radius: var(--em-textfield-border-radius, 0.5rem);
+  border: var(--em-textfield-border-width, 1px) solid var(--em-textfield-border-color, #b8b8bd);
+  background: var(--em-textfield-background, #f7f7f8);
 }
 
 .input:hover {
-  background: var(--TEMP-text-input-background-color-hover, #e4e4ea);
-  color: var(--TEMP-text-input-label-color-hover, #5c5c66);
+  background: var(--em-textfield-background--active, #e4e4ea);
 }
-.input:focus-within {
-  background: var(--TEMP-text-input-background-color-hover, #e4e4ea);
-  color: var(--TEMP-text-input-label-color-focused, #212129);
+
+.input.error {
+  border: var(--em-textfield-border-width--error, 2px) solid
+    var(--em-textfield-border-color--error, #bc1010);
+}
+.input:focus-within input {
+  color: var(--em-textfield-color--filled, #212129);
+  font-weight: var(--em-textfield-font-weight--filled, 500);
 }
 
 .input svg {
-  width: var(--TEMP-select-menu-icon-size-width, 1rem);
-  height: var(--TEMP-select-menu-icon-size-height, 1rem);
+  flex-shrink: 0;
+  width: var(--em-textfield-icon-size, 1rem);
+  height: var(--em-textfield-icon-size, 1rem);
+  color: var(--em-textfield-color, #5c5c66);
 }
 
-.input input {
-  border: none;
-  background: inherit;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  outline: none;
-  color: inherit;
-  width: 100%;
-
-  padding: 0 var(--TEMP-text-input-padding-default, 0.5rem);
-  /* font-family: var(--TEMP-text-input-label-font-font-family, Inter); */
-  font-size: var(--TEMP-text-input-label-font-size, 0.75rem);
-  font-style: normal;
-  font-weight: var(--TEMP-text-input-label-font-weight, 500);
-  line-height: var(--TEMP-text-input-label-font-line-height, 0.875rem); /* 116.667% */
+.input:focus-within svg {
+  color: var(--em-textfield-color--filled, #212129);
 }
 
-.input input:focus {
-  color: var(--TEMP-text-input-label-color-focused, #212129);
-}
-
-.input:has(input:disabled) {
-  color: var(--TEMP-text-input-label-color-disabled, #b8b8bd);
-  border: var(--TEMP-text-input-border-width-default, 1px) solid
-    var(--TEMP-text-input-border-color-default, #d2d2d5);
-  background: var(--TEMP-text-input-background-color-disabled, #fff);
-}
-
-.input input::placeholder {
-  color: var(--TEMP-text-input-label-color-default, #5c5c66);
-}
-
-.input input:disabled::placeholder {
-  color: var(--TEMP-text-input-label-color-disabled, #b8b8bd);
-}
-
-.input div {
-  display: flex;
-}
-
-.clearIcon {
+.input svg.clearIcon {
   cursor: pointer;
 }
 
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-  gap: var(--TEMP-form-padding-small, 0.5rem);
+.input input {
+  height: inherit;
+  border: unset;
+  background: unset;
+  margin: unset;
+  width: 100%;
+  padding: 0 var(--em-textfield-label-padding, 0.5rem);
+  color: var(--em-textfield-color, #5c5c66);
+  font-family: var(--em-textfield-font-family, Inter);
+  font-size: var(--em-textfield-font-size, 0.75rem);
+  font-style: normal;
+  font-weight: var(--em-textfield-font-weight, 400);
+  line-height: var(--em-text-input-label-font-line-height, 0.875rem);
 }
 
-.requiredText {
-  padding-bottom: var(--TEMP-form-padding-small, 0.5rem);
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: var(--TEMP-form-form-font-font-size-required, 0.75rem);
-  font-weight: var(--TEMP-form-form-font-font-weight, 400);
-  line-height: var(--TEMP-form-form-font-line-height, 1rem);
-  color: var(--TEMP-form-section-font-font-color, #212129);
+.input:has(input:not(:placeholder-shown)) {
+  background: var(--em-textfield-background--filled, #ededf1);
 }
 
-.inputError {
-  border: var(--TEMP-text-input-border-width-error, 2px) solid
-    var(--TEMP-text-input-border-color-error, #bc1010);
+.input:has(input:disabled) {
+  background: var(--em-textfield-background--disabled, #fff);
+}
+
+.input:has(input:disabled) svg,
+.input:has(input:disabled) input {
+  color: var(--em-textfield-color--disabled, #b8b8bd);
+}
+
+.input input:focus {
+  outline: none;
 }
