text and number field

--- a/src/remarkable-ui/editors/InputField/InputField.module.css
+++ b/src/remarkable-ui/editors/InputField/InputField.module.css
@@ -42,6 +42,11 @@
 
 .input svg.clearIcon {
   cursor: pointer;
+  visibility: hidden;
+}
+
+.input svg.clearIcon.clearIconVisible {
+  visibility: visible;
 }
 
 .input input {
