--- a/src/remarkable-ui/editors/select/shared/SelectFieldTrigger/SelectFieldTrigger.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectFieldTrigger/SelectFieldTrigger.module.css
@@ -1,11 +1,11 @@
 .selectFieldTrigger {
   cursor: pointer;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: var(--em-selectfield-trigger-height, 2.5rem);
   min-width: var(--em-selectfield-trigger-min-width, 4rem);
-  max-width: var(--em-select-menu-size-width-max-width, 25rem);
   padding: var(--em-selectfield-trigger-padding, 0.75rem);
   border-radius: var(--em-selectfield-trigger-border-radius, 0.5rem);
   border: var(--em-selectfield-trigger-border-width, 1px) solid
@@ -28,6 +28,7 @@
 }
 
 .selectFieldTrigger:disabled {
+  pointer-events: none;
   color: var(--em-selectfield-trigger-color--disabled, #b8b8bd);
   background: var(--em-selectfield-trigger-background, #fff);
 }
@@ -45,7 +46,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   color: var(--em-selectfield-trigger-color, #212129);
-  padding: 0 var(--em-selectfield-trigger-label-padding-right-left, 0.5rem);
+  padding: 0 var(--em-selectfield-trigger-label-padding-left-right, 0.5rem);
   font-family: var(--em-selectfield-trigger-font-family, sans-serif);
   font-size: var(--em-selectfield-trigger-font-size, 0.75rem);
   font-weight: var(--em-selectfield-trigger-font-weight, 500);
