--- a/src/remarkable-ui/editors/select/shared/SelectFieldContent/SelectListOptions/SelectFieldCategory/SelectFieldCategory.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectFieldContent/SelectListOptions/SelectFieldCategory/SelectFieldCategory.module.css
@@ -1,4 +1,5 @@
 .selectFieldCategory {
+  display: flex;
   font-style: normal;
   padding: var(--em-selectfield-category-padding, 0.25rem);
   border-radius: var(--em-selectfield-category-border-radius, 0.375rem);
