--- a/src/remarkable-ui/components/charts/tables/Table/components/TableBody/TableBody.module.css
+++ b/src/remarkable-ui/components/charts/tables/Table/components/TableBody/TableBody.module.css
@@ -1,50 +1,47 @@
-.tableBody td.tableBodyCellIndex {
+.tableBody .tableBodyCellIndex {
   position: sticky;
   left: 0;
   z-index: 1;
   pointer-events: none;
-  background: var(--TEMP-table-background-color-default-header_R, #fff);
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: calc(-1 * var(--TEMP-table-border-width-default, 1px));
-    width: var(--TEMP-table-border-width-default, 1px);
-    background: var(--TEMP-table-border-color-default, #ededf1);
-  }
+  font-style: normal;
+  color: var(--em-table-text-muted, #5c5c66);
+  font-family: var(--em-tablechart-font-family, sans-serif);
+  font-size: var(--em-tablechart-font-size, 0.75rem);
+  font-weight: var(--em-table-font-font-weight-regular, 400);
+  line-height: var(--em-tablechart-line-height, 0.875rem);
 }
 
-.tableBody td.tableBodyCellIndex p {
-  color: var(--TEMP-table-text-muted, #5c5c66);
+.tableBodyCellIndex::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: calc(-1 * var(--em-tablechart-border-width, 1px));
+  width: var(--em-tablechart-border-width, 1px);
+  background: var(--em-tablechart-border-color, #ededf1);
 }
 
 .tableBodyCell {
   position: relative;
-}
-
-.tableBodyCell p {
-  white-space: nowrap;
-  padding: 0 var(--TEMP-table-padding-small, 0.25rem);
-  /* font-family: var(--TEMP-table-font-family, Inter); */
-  color: var(--TEMP-table-text-default, #212129);
-  font-size: var(--TEMP-table-font-size, 0.75rem);
   font-style: normal;
-  font-weight: var(--TEMP-table-font-weight-regular, 400);
-  line-height: 0.875rem;
+  white-space: nowrap;
+  color: var(--em-tablechart-color, #212129);
+  font-family: var(--em-tablechart-font-family, sans-serif);
+  font-size: var(--em-tablechart-font-size, 0.75rem);
+  font-weight: var(--em-tablechart-font-weight, 400);
+  line-height: var(--em-tablechart-line-height, 0.875rem);
 }
 
 .copyButton {
   position: absolute;
   top: 50%;
-  right: var(--TEMP-table-padding-medium_R, 0.5rem);
+  right: var(--em-tablechart-cell-padding, 0.5rem);
   transform: translateY(-50%);
   opacity: 0;
 }
 
 .copyButton.leftAlign {
-  left: var(--TEMP-table-padding-medium_R, 0.5rem);
+  left: var(--em-tablechart-cell-padding, 0.5rem);
   right: auto;
 }
 
