--- a/src/remarkable-ui/components/charts/tables/Table/components/TablePagination/TablePagination.module.css
+++ b/src/remarkable-ui/components/charts/tables/Table/components/TablePagination/TablePagination.module.css
@@ -15,11 +15,11 @@
   align-items: center;
   font-style: normal;
   gap: var(--em-tablechart-pagination-label-padding-left-right, 1rem);
-  color: var(--em-table-text-default, #212129);
-  font-family: var(--em-table-font-font-family, sans-serif);
-  font-size: var(--em-table-font-font-size, 0.75rem);
-  font-weight: var(--em-table-font-font-weight-medium, 500);
-  line-height: var(--em-table-font-line-height, 0.875rem);
+  color: var(--em-tablechart-color, #212129);
+  font-family: var(--em-tablechart-font-family, sans-serif);
+  font-size: var(--em-tablechart-font-size, 0.75rem);
+  font-weight: var(--em-tablechart-font-weight--medium, 500);
+  line-height: var(--em-tablechart-line-height, 0.875rem);
 }
 
 .tablePaginationCentralButtons {
