--- a/src/remarkable-ui/components/shared/PageOverlay/PageOverlay.module.css
+++ b/src/remarkable-ui/components/shared/PageOverlay/PageOverlay.module.css
@@ -8,5 +8,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--em-pageoverlay-background, rgba(33, 33, 41, 0.8));
+  background: var(--em-overlay-background, rgba(33, 33, 41, 0.8));
 }
