--- a/src/remarkable-pro/components/charts/shared/ChartCard/ChartCard.module.css
+++ b/src/remarkable-pro/components/charts/shared/ChartCard/ChartCard.module.css
@@ -3,18 +3,11 @@
   width: 100%;
 }
 
-.rightContent {
-  position: relative;
-  right: 0;
-}
-
 .fixedContent {
   z-index: 3;
   background: inherit;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  right: 0;
 }
 
 .fixedContent.loading {
@@ -24,4 +17,10 @@
 
 .fixedContent.hidden {
   display: none;
+}
+
+.chartCardRightContent {
+  width: 2rem;
+  height: 2rem;
+  position: relative;
 }
