--- a/src/remarkable-pro/editors/ColorEditor/ColorEditor.module.css
+++ b/src/remarkable-pro/editors/ColorEditor/ColorEditor.module.css
@@ -1,24 +1,24 @@
 .colorInput {
-  height: var(--space-500, 2.5rem);
-  width: var(--space-500, 2.5rem);
-  padding: var(--space-100, 0.5rem);
-  gap: var(--space-100, 0.5rem);
-  border-radius: var(--radius-050, 0.25rem);
+  cursor: pointer;
+  height: var(--em-textfield-height, 2.5rem);
+  width: var(--em-textfield-height, 2.5rem);
+  gap: var(--em-textfield-padding--space-100, 0.5rem);
+  padding: var(--em-textfield-padding, 0.5rem);
+  border-radius: var(--em-textfield-border-radius, 0.5rem);
+  border: var(--em-textfield-border-width, 1px) solid var(--em-textfield-border-color, #b8b8bd);
   background: var(--backdrop-elevation-0, #fff);
-  color: var(--content-default, #3a3e45);
-  border: var(--border-xsmall, 0.0625rem) solid var(--dividers-default, #a8acb5);
 }
 
 .colorInput::-webkit-color-swatch-wrapper {
-  padding: 0; /* removes inner padding */
+  padding: 0;
 }
 
 .colorInput::-webkit-color-swatch {
-  border: unset; /* INNER color box border */
+  border: unset;
   border-radius: 50%;
 }
 
 .colorInput::-moz-color-swatch {
-  border: unset; /* Firefox INNER border */
+  border: unset;
   border-radius: 50%;
 }
