--- a/src/components/editors/selects/shared/SelectFieldContent/SelectFieldContent.module.css
+++ b/src/components/editors/selects/shared/SelectFieldContent/SelectFieldContent.module.css
@@ -19,6 +19,12 @@
     var(--em-selectfield-content-shadow-color, rgba(33, 33, 41, 0.25));
 }
 
+.selectFieldContent.fitContent {
+  min-width: unset;
+  max-height: unset;
+  max-width: unset;
+}
+
 .selectFieldContentList {
   display: flex;
   flex-direction: column;
