--- a/src/components/editors/dates/DateRangePicker/DateRangePicker.css
+++ b/src/components/editors/dates/DateRangePicker/DateRangePicker.css
@@ -203,6 +203,14 @@
   align-items: center;
   gap: var(--rdp-dropdown-gap);
 }
+
+.rdp-dropdowns span {
+  color: var(--em-daterangepicker-label-color, #212129);
+  font-family: var(--em-daterangepicker-label-font-family, sans-serif);
+  font-size: var(--em-daterangepicker-label-font-size, 0.875rem);
+  font-weight: var(--em-daterangepicker-label-font-weight, 500);
+}
+
 .rdp-dropdown {
   z-index: 2;
 
