--- a/src/components/charts/tables/Table/components/TableBody/TableBody.module.css
+++ b/src/components/charts/tables/Table/components/TableBody/TableBody.module.css
@@ -16,5 +16,6 @@
 }
 
 .tableBody td {
+  /* TODO: Get this fixed in Figma */
   max-width: var(--em-tablechart-cell-max-width, calc(3 * var(--em-core-size--2000)));
 }
